crates/ty_python_semantic/resources/mdtest/snapshots/pep695_type_aliases.…_-_PEP_695_type_aliases_-_Stringified_values_(5d8e1185129f8ae4).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: pep695_type_aliases.md - PEP 695 type aliases - Stringified values
mdtest path: crates/ty_python_semantic/resources/mdtest/pep695_type_aliases.md
---

# Python source files

## mdtest_snippet.py

```
1 | type X = "int | str"
2 | 
3 | def f(obj: X):
4 |     reveal_type(obj)  # revealed: int | str
5 | # error: [unsupported-operator]
6 | type Y = "int" | str
7 | 
8 | def g(obj: Y):
9 |     reveal_type(obj)  # revealed: int | str
```

# Diagnostics

```
error[unsupported-operator]: Unsupported `|` operation
 --> src/mdtest_snippet.py:6:10
  |
4 |     reveal_type(obj)  # revealed: int | str
5 | # error: [unsupported-operator]
6 | type Y = "int" | str
  |          -----^^^---
  |          |       |
  |          |       Has type `<class 'str'>`
  |          Has type `Literal["int"]`
7 |
8 | def g(obj: Y):
  |
info: A type alias scope is deferred but will be executed at runtime if the `__value__` property is accessed
info: rule `unsupported-operator` is enabled by default

```
