crates/ty_python_semantic/resources/mdtest/snapshots/protocols.md_-_Protocols_-_Diagnostics_and_auto…_(310665856cfe2424).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: protocols.md - Protocols - Diagnostics and autofixes for `Protocol` classes defined in invalid ways
mdtest path: crates/ty_python_semantic/resources/mdtest/protocols.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Protocol, Generic, TypeVar
 2 | 
 3 | T = TypeVar("T")
 4 | 
 5 | class Foo(Protocol[T], Generic[T]): ...  # error: [invalid-generic-class]
 6 | 
 7 | # fmt: off
 8 | 
 9 | # error: [invalid-generic-class]
10 | class Bar(Protocol[
11 |   T,
12 | ], Generic[T]): ...
13 | 
14 | class Spam(  # docs
15 |   # error: [invalid-generic-class]
16 |   Protocol[  # some comment
17 |     # another comment
18 |     T,  # just love my comments
19 |     # very well documented code
20 | ],  # important comma!
21 |   # and a newline...
22 |   Generic[  # look at this
23 |   # wow
24 |     T,  # wow
25 |     # wowwwwwww
26 |   ] # oof
27 |   # another newline?
28 | ): ...
29 | 
30 | # fmt: on
31 | 
32 | class Foo[T](Protocol[T]): ...  # error: [invalid-generic-class]
```

# Diagnostics

```
error[invalid-generic-class]: Cannot both inherit from subscripted `Protocol` and subscripted `Generic`
 --> src/mdtest_snippet.py:5:11
  |
5 | class Foo(Protocol[T], Generic[T]): ...  # error: [invalid-generic-class]
  |           ^^^^^^^^^^^
help: Remove the type parameters from the `Protocol` base
  |
5 - class Foo(Protocol[T], Generic[T]): ...  # error: [invalid-generic-class]
5 + class Foo(Protocol, Generic[T]): ...  # error: [invalid-generic-class]
  |
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-generic-class]: Cannot both inherit from subscripted `Protocol` and subscripted `Generic`
  --> src/mdtest_snippet.py:10:11
   |
10 |   class Bar(Protocol[
   |  ___________^
11 | |   T,
12 | | ], Generic[T]): ...
   | |_^
help: Remove the type parameters from the `Protocol` base
   |
10 - class Bar(Protocol[
11 -   T,
12 - ], Generic[T]): ...
10 + class Bar(Protocol, Generic[T]): ...
   |
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-generic-class]: Cannot both inherit from subscripted `Protocol` and subscripted `Generic`
  --> src/mdtest_snippet.py:16:3
   |
16 | /   Protocol[  # some comment
17 | |     # another comment
18 | |     T,  # just love my comments
19 | |     # very well documented code
20 | | ],  # important comma!
   | |_^
help: Remove the type parameters from the `Protocol` base
   |
16 -   Protocol[  # some comment
17 -     # another comment
18 -     T,  # just love my comments
19 -     # very well documented code
20 - ],  # important comma!
16 +   Protocol,  # important comma!
   |
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-generic-class]: Cannot both inherit from subscripted `Protocol` and use PEP 695 type variables
  --> src/mdtest_snippet.py:32:14
   |
32 | class Foo[T](Protocol[T]): ...  # error: [invalid-generic-class]
   |              ^^^^^^^^^^^
help: Remove the type parameters from the `Protocol` base
   |
32 - class Foo[T](Protocol[T]): ...  # error: [invalid-generic-class]
32 + class Foo[T](Protocol): ...  # error: [invalid-generic-class]
   |
note: This is an unsafe fix and may change runtime behavior

```
